--- a/src/app/admin-alunos/admin-alunos.component.html
+++ b/src/app/admin-alunos/admin-alunos.component.html
@@ -1,97 +1,44 @@
-<div class="card">
-    <!-- <h2>Administração de Alunos</h2> -->
-    <mat-card class='card-header'>
-        <h4>Administração de Alunos</h4>
-    </mat-card>
+<!--<div class="card">-->
+<!--     <h2>Administração de Alunos</h2>-->
+<!--</div>-->
+<h2>Administração de Alunos</h2>
+<div fxLayout fxLayoutAlign="center center">
+  <mat-form-field fxFlex="40%">
+    <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filtrar Aluno">
+  </mat-form-field>
 
-    <div class="content">
-        <form [formGroup]="formStudent" class="my-form" (ngSubmit)="onSubmit()">
-            <mat-form-field appearance="legacy" class="col-lg-5">
-                <mat-label>Nome</mat-label>
-                <input matInput formControlName="name" required>
-                <mat-error *ngIf="formStudent.invalid">{{getErrorMessage()}}</mat-error>
-            </mat-form-field>
-
-            <mat-form-field appearance="legacy" class="col-lg-5">
-                <mat-label>CPF</mat-label>
-                <input matInput formControlName="cpf" required>
-                <mat-error *ngIf="formStudent.invalid">{{getErrorMessage()}}</mat-error>
-            </mat-form-field>
-
-            <mat-form-field appearance="legacy" class="col-lg-5">
-                <mat-label>Data de Matrícula</mat-label>
-                <input matInput [matDatepicker]="picker" formControlName="registration" required>
-                <mat-error *ngIf="formStudent.invalid">{{getErrorMessage()}}</mat-error>
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field>
-
-            <mat-form-field appearance="legacy" class="col-lg-5">
-                <mat-label>Sexo</mat-label>
-                <mat-select formControlName="gender" required>
-                    <mat-option value="1">Masculino</mat-option>
-                    <mat-option value="0">Feminino</mat-option>
-                </mat-select>
-            </mat-form-field>
-
-            <mat-form-field appearance="legacy" class="col-lg-5">
-              <mat-label>Email</mat-label>
-              <input matInput formControlName="email" required>
-            </mat-form-field>
-
-            <mat-form-field appearance="legacy" class="col-lg-5">
-              <mat-label>Telefone</mat-label>
-              <input matInput formControlName="phone" required>
-            </mat-form-field>
-
-            <mat-form-field appearance="legacy" class="col-lg-5">
-              <mat-label>Aulas Práticas</mat-label>
-              <input matInput formControlName="practicalFines">
-            </mat-form-field>
-
-            <mat-form-field appearance="legacy" class="col-lg-5">
-              <mat-label>Aulas Teóricas</mat-label>
-              <input matInput formControlName="theoreticalFines">
-            </mat-form-field>
-
-            <mat-form-field appearance="legacy" class="col-lg-5">
-                <mat-label>Aulas Diúrnas</mat-label>
-                <input matInput formControlName="dayClasses">
-            </mat-form-field>
-
-            <mat-form-field appearance="legacy" class="col-lg-5">
-                <mat-label>Aulas Noturnas</mat-label>
-                <input matInput formControlName="nightClasses">
-            </mat-form-field>
-
-            <mat-form-field appearance="legacy" class="col-lg-5">
-                <mat-label>Direção Defensiva</mat-label>
-                <input matInput formControlName="defensiveDriving">
-            </mat-form-field>
-
-            <mat-form-field appearance="legacy" class="col-lg-5">
-                <mat-label>Legislação</mat-label>
-                <input matInput formControlName="legislation">
-            </mat-form-field>
-
-            <mat-form-field appearance="legacy" class="col-lg-5">
-                <mat-label>Mecânica</mat-label>
-                <input matInput formControlName="mechanics">
-            </mat-form-field>
-
-            <mat-form-field appearance="legacy" class="col-lg-5">
-                <mat-label>Meio Ambiente</mat-label>
-                <input matInput formControlName="environment">
-            </mat-form-field>
-
-            <mat-form-field appearance="legacy" class="col-lg-5">
-                <mat-label>Primeiros Socorros</mat-label>
-                <input matInput formControlName="firstAid">
-            </mat-form-field>
-          <button mat-raised-button color="primary" type="submit" class="button">Salvar</button>
-
-        </form>
-    </div>
 </div>
+
+<div class="mat-elevation-z8 data-table">
+  <table mat-table matSort class="table" [dataSource]="dataSource">
+    <ng-container matColumnDef="N°">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> N° </th>
+      <td mat-cell *matCellDef="let student" class="gray-element"> {{student.seqNo}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome </th>
+      <td mat-cell *matCellDef="let student" class="gray-element"> {{student.name}}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="cpf">
+      <th mat-header-cell *matHeaderCellDef> CPF </th>
+      <td mat-cell *matCellDef="let student" class="gray-element"> {{student.cpf}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="registrationDate">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Data de Matrícula </th>
+      <td mat-cell *matCellDef="let student" class="gray-element"> {{student.registrationDate | date: 'dd/MM/yyyy'}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+  </table>
+</div>
+
+<button mat-raised-button color="primary" type="submit" (click)="openDialog()" class="button">Adicionar novo aluno</button>
+
 
 
