--- a/src/app/admin-alunos/admin-alunos.component.scss
+++ b/src/app/admin-alunos/admin-alunos.component.scss
@@ -53,4 +53,46 @@
     background-color: #FFD700;
     color: #000;
     margin-left: 10%;
+    margin-top: 30px;
+}
+
+h2 {
+  padding-left: 10%;
+}
+
+.mat-form-field {
+  padding-left: 10%;
+}
+
+
+.table{
+  width: 100%;
+  // margin: 15% auto;
+}
+
+.data-table {
+  width: 70%;
+  margin-left: 10%;
+}
+
+button {
+  background-color: transparent;
+  box-shadow: none;
+}
+
+.w-25 {
+  width: 25px;
+}
+
+.mat-cell{
+  font-size:14px;
+  font-family: Verdana,Sans-Serif;
+}
+
+.centralize {
+  text-align: center;
+}
+
+.gray-element{
+  color: gray;
 }
